--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^3.0.1",
     "recharts": "^2.12.7",
     "styled-components": "^6.1.11",
+    "sweetalert2": "^11.12.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
